Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -1207,7 +1207,7 @@
   "pli-tv-kd16:21.3.36": "The Sangha has appointed monk so-and-so as supervisor of novice monks. ",
   "pli-tv-kd16:21.3.37": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
   "pli-tv-kd16:21.3.38": "The third section for recitation is finished. ",
-  "pli-tv-kd16:21.3.39": "The sixth chapter on dwellings is finished. ",
+  "pli-tv-kd16:21.3.39": "The sixth chapter on resting places is finished. ",
   "pli-tv-kd16:21.3.197": "He has conquered all and knows the world, ",
   "pli-tv-kd16:21.3.198": "The Leader intent on what’s beneficial: ",
   "pli-tv-kd16:21.3.199": "It’s for the sake of shelter and happiness, ",
