--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "mn81:6.5": "For I regard it as holy to see that Blessed One.’ ",
   "mn81:6.6": "When he said this, Jotipāla said to him, ",
   "mn81:6.7": "‘Enough, dear Ghaṭīkāra. ",
-  "mn81:6.8": "What’s the use of seeing that baldy, that fake ascetic?’ ",
+  "mn81:6.8": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:6.9": "For a second time … ",
   "mn81:6.10": "and a third time, Ghaṭīkāra addressed Jotipāla, ",
   "mn81:6.11": "‘Come, dear Jotipāla, let’s go to see the Blessed One Kassapa, the perfected one, the fully awakened Buddha. ",
