Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -37,7 +37,7 @@
   "mn81:6.12": "For I regard it as holy to see that Blessed One.’ ",
   "mn81:6.13": "For a third time, Jotipāla said to him, ",
   "mn81:6.14": "‘Enough, dear Ghaṭīkāra. ",
-  "mn81:6.15": "What’s the use of seeing that baldy, that fake ascetic?’ ",
+  "mn81:6.15": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:6.16": "‘Well then, dear Jotipāla, let’s take some bathing paste of powdered shell and go to the river to bathe.’ ",
   "mn81:6.17": "‘Yes, dear,’ replied Jotipāla. ",
   "mn81:6.18": "So that’s what they did. ",
