Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -47,7 +47,7 @@
   "mn81:7.4": "For I regard it as holy to see that Blessed One.’ ",
   "mn81:7.5": "When he said this, Jotipāla said to him, ",
   "mn81:7.6": "‘Enough, dear Ghaṭīkāra. ",
-  "mn81:7.7": "What’s the use of seeing that baldy, that fake ascetic?’ ",
+  "mn81:7.7": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:7.8": "For a second time … ",
   "mn81:7.9": "and a third time, Ghaṭīkāra addressed Jotipāla, ",
   "mn81:7.10": "‘Dear Jotipāla, the Buddha Kassapa’s monastery is not far away. ",
