Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -55,14 +55,14 @@
   "mn81:7.12": "For I regard it as holy to see that Blessed One.’ ",
   "mn81:7.13": "For a third time, Jotipāla said to him, ",
   "mn81:7.14": "‘Enough, dear Ghaṭīkāra. ",
-  "mn81:7.15": "What’s the use of seeing that baldy, that fake ascetic?’ ",
+  "mn81:7.15": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:8.1": "Then Ghaṭīkāra grabbed Jotipāla by the belt and said, ",
   "mn81:8.2": "‘Dear Jotipāla, the Buddha Kassapa’s monastery is not far away. ",
   "mn81:8.3": "Let’s go to see the Blessed One Kassapa, the perfected one, the fully awakened Buddha. ",
   "mn81:8.4": "For I regard it as holy to see that Blessed One.’ ",
   "mn81:8.5": "So Jotipāla undid his belt and said to Ghaṭīkāra, ",
   "mn81:8.6": "‘Enough, dear Ghaṭīkāra. ",
-  "mn81:8.7": "What’s the use of seeing that baldy, that fake ascetic?’ ",
+  "mn81:8.7": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:9.1": "Then Ghaṭīkāra grabbed Jotipāla by the hair of his freshly-washed head and said, ",
   "mn81:9.2": "‘Dear Jotipāla, the Buddha Kassapa’s monastery is not far away. ",
   "mn81:9.3": "Let’s go to see the Blessed One Kassapa, the perfected one, the fully awakened Buddha. ",
