--- a/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
@@ -50,7 +50,7 @@
   "mn2:8.10": "An uneducated ordinary person who is fettered by views is not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. ",
   "mn2:8.11": "They’re not freed from suffering, I say. ",
   "mn2:9.1": "",
-  "mn2:9.2": "But take an educated noble disciple who has seen the noble ones, and is skilled and trained in the teaching of the noble ones. They’ve seen good persons, and are skilled and trained in the teaching of the good persons. ",
+  "mn2:9.2": "But take a learned noble disciple who has seen the noble ones, and is skilled and trained in the teaching of the noble ones. They’ve seen good persons, and are skilled and trained in the teaching of the good persons. ",
   "mn2:9.3": "They understand to which things they should pay attention and to which things they should not pay attention. ",
   "mn2:9.4": "So they pay attention to things they should and don’t pay attention to things they shouldn’t. ",
   "mn2:10.1": "And what are the things to which they don’t pay attention and should not? ",
