Translations by sujato to translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
@@ -48,7 +48,7 @@
   "sn36.6:3.16": "If they feel a painful feeling, they feel it detached. ",
   "sn36.6:3.17": "If they feel a neutral feeling, they feel it detached. ",
   "sn36.6:3.18": "They’re called an educated noble disciple who is detached from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress, I say. ",
-  "sn36.6:3.19": "This is the difference between an educated noble disciple and an uneducated ordinary person. ",
+  "sn36.6:3.19": "This is the difference between a learned noble disciple and an uneducated ordinary person. ",
   "sn36.6:4.1": "A wise and learned person isn’t affected ",
   "sn36.6:4.2": "by feelings of pleasure and pain. ",
   "sn36.6:4.3": "This is the great difference in skill ",
