--- a/translation/en/sujato/sutta/an/an4/an4.125_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.125_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "an4.125:1.6": "The lifespan of the gods of Brahma’s Host is one eon. ",
   "an4.125:1.7": "An ordinary person stays there until the lifespan of those gods is spent, then they go to hell or the animal realm or the ghost realm. ",
   "an4.125:1.8": "But a disciple of the Buddha stays there until the lifespan of those gods is spent, then they’re extinguished in that very life. ",
-  "an4.125:1.9": "This is the difference between an educated noble disciple and an uneducated ordinary person, that is, when there is a place of rebirth. ",
+  "an4.125:1.9": "This is the difference between a learned noble disciple and an uneducated ordinary person, that is, when there is a place of rebirth. ",
   "an4.125:2.1": "Furthermore, a person meditates spreading a heart full of compassion … ",
   "an4.125:2.2": "rejoicing … ",
   "an4.125:2.3": "equanimity to one direction, and to the second, and to the third, and to the fourth. In the same way above, below, across, everywhere, all around, they spread a heart full of equanimity to the whole world—abundant, expansive, limitless, free of enmity and ill will. ",
