--- a/translation/en/sujato/sutta/an/an8/an8.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an8/an8.6_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "an8.6:1.4": "These eight worldly conditions revolve around the world, and the world revolves around these eight worldly conditions. ",
   "an8.6:2.1": "An uneducated ordinary person encounters gain and loss, fame and disgrace, blame and praise, and pleasure and pain. ",
   "an8.6:2.2": "And so does an educated noble disciple. ",
-  "an8.6:2.3": "What, then, is the difference between an ordinary uneducated person and an educated noble disciple?” ",
+  "an8.6:2.3": "What, then, is the difference between an ordinary uneducated person and a learned noble disciple?” ",
   "an8.6:2.4": "“Our teachings are rooted in the Buddha. He is our guide and our refuge. Sir, may the Buddha himself please clarify the meaning of this. The mendicants will listen and remember it.” ",
   "an8.6:3.1": "“Well then, mendicants, listen and pay close attention, I will speak.” ",
   "an8.6:3.2": "“Yes, sir,” they replied. ",
@@ -55,7 +55,7 @@
   "an8.6:6.5": "They don’t favor pleasure or oppose pain. ",
   "an8.6:6.6": "Having given up favoring and opposing, they’re freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. ",
   "an8.6:6.7": "They’re freed from suffering, I say. ",
-  "an8.6:6.8": "This is the difference between an educated noble disciple and an uneducated ordinary person. ",
+  "an8.6:6.8": "This is the difference between a learned noble disciple and an uneducated ordinary person. ",
   "an8.6:7.1": "Gain and loss, fame and disgrace, ",
   "an8.6:7.2": "blame and praise, and pleasure and pain. ",
   "an8.6:7.3": "These qualities among people are impermanent, ",
