--- a/translation/en/sujato/sutta/an/an5/an5.48_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.48_translation-en-sujato.json
@@ -26,7 +26,7 @@
   "an5.48:4.4": "If I were to sorrow and wail and lament, beating my breast and falling into confusion, just because someone liable to old age grows old, I’d lose my appetite and my physical appearance would deteriorate. My work wouldn’t get done, my enemies would be encouraged, and my friends would be dispirited.’ ",
   "an5.48:4.5": "And so, when someone liable to old age grows old, they don’t sorrow and wail and lament, beating their breast and falling into confusion. ",
   "an5.48:4.6": "This is called ",
-  "an5.48:4.7": "an educated noble disciple who has drawn out sorrow’s poisoned arrow, struck by which uneducated ordinary people only mortify themselves. ",
+  "an5.48:4.7": "a learned noble disciple who has drawn out sorrow’s poisoned arrow, struck by which uneducated ordinary people only mortify themselves. ",
   "an5.48:4.8": "Sorrowless, free of thorns, that noble disciple only extinguishes themselves. ",
   "an5.48:5.1": "Furthermore, an educated noble disciple has someone liable to sickness … death … ending … perishing. ",
   "an5.48:5.2": "So they reflect on perishing: ",
