Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.47_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.47_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.47_translation-en-sujato.json
@@ -25,7 +25,7 @@
   "sn22.47:2.12": "‘I will not be percipient’, ",
   "sn22.47:2.13": "‘I will be neither percipient nor non-percipient’. ",
   "sn22.47:3.1": "The five faculties stay right where they are. ",
-  "sn22.47:3.2": "But an educated noble disciple gives up ignorance about them and gives rise to knowledge. ",
+  "sn22.47:3.2": "But a learned noble disciple gives up ignorance about them and gives rise to knowledge. ",
   "sn22.47:3.3": "With the fading away of ignorance and the arising of knowledge, they don’t think ‘I am’, ",
   "sn22.47:3.4": "‘I am this’, ",
   "sn22.47:3.5": "‘I will be’, ",
