Translations by sujato to translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "an7.54:4.9": "‘A Realized One neither exists nor doesn’t exist after death’: this is a regret. ",
   "an7.54:4.10": "An uneducated ordinary person doesn’t understand regrets, their origin, their cessation, or the practice that leads to their cessation. ",
   "an7.54:4.11": "And so their regrets grow. They’re not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re not freed from suffering, I say. ",
-  "an7.54:5.1": "An educated noble disciple does understand regrets, their origin, their cessation, and the practice that leads to their cessation. ",
+  "an7.54:5.1": "A learned noble disciple does understand regrets, their origin, their cessation, and the practice that leads to their cessation. ",
   "an7.54:5.2": "And so their regrets cease. They’re freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re freed from suffering, I say. ",
   "an7.54:5.3": "Knowing and seeing this, an educated noble disciple does not answer: ‘A Realized One exists after death’ … ",
   "an7.54:5.4": "‘a Realized One neither exists nor doesn’t exist after death.’ ",
