--- a/translation/en/sujato/sutta/sn/sn55/sn55.13_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn55/sn55.13_translation-en-sujato.json
@@ -18,7 +18,7 @@
   "sn55.13:4.2": "And they do have the experiential confidence in the Saṅgha that causes a learned noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
   "sn55.13:4.3": "‘The Saṅgha of the Buddha’s disciples is practicing the way that’s good, direct, methodical, and proper. It consists of the four pairs, the eight individuals. This Saṅgha of the Buddha’s disciples is worthy of offerings dedicated to the gods, worthy of hospitality, worthy of a religious donation, and worthy of veneration with joined palms.’ ",
   "sn55.13:5.1": "They don’t have the unethical conduct that causes an uneducated ordinary person to be reborn—when their body breaks up, after death—in a place of loss, a bad place, the underworld, hell. ",
-  "sn55.13:5.2": "And they do have the ethical conduct loved by the noble ones that causes an educated noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
+  "sn55.13:5.2": "And they do have the ethical conduct loved by the noble ones that causes a learned noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
   "sn55.13:5.3": "Their ethical conduct is loved by the noble ones, unbroken, impeccable, spotless, and unmarred, liberating, praised by sensible people, not mistaken, and leading to immersion. ",
   "sn55.13:5.4": "People have to give up these four things and possess these four things in order for the Buddha to declare that they’re a stream-enterer, not liable to be reborn in the underworld, bound for awakening.” "
 }
