Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.74_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.74_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.74_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn22.74:1.4": "perception, ",
   "sn22.74:1.5": "choices, ",
   "sn22.74:1.6": "and consciousness. ",
-  "sn22.74:1.7": "An educated noble disciple does truly understand the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.74:1.7": "a learned noble disciple does truly understand the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.74:1.8": "feeling, ",
   "sn22.74:1.9": "perception, ",
   "sn22.74:1.10": "choices, ",
