--- a/translation/en/sujato/sutta/sn/sn22/sn22.73_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.73_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn22.73:1.4": "perception, ",
   "sn22.73:1.5": "choices, ",
   "sn22.73:1.6": "and consciousness. ",
-  "sn22.73:1.7": "An educated noble disciple does truly understand the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.73:1.7": "A learned noble disciple does truly understand the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.73:1.8": "feeling, ",
   "sn22.73:1.9": "perception, ",
   "sn22.73:1.10": "choices, ",
