Translations by sujato to translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
@@ -21,7 +21,7 @@
   "sn14.12:7.4": "Thoughts of renunciation give rise to enthusiasm for renunciation. ",
   "sn14.12:7.5": "Enthusiasm for renunciation gives rise to fervor for renunciation. ",
   "sn14.12:7.6": "Fervor for renunciation gives rise to the search for renunciation. ",
-  "sn14.12:7.7": "a learned noble disciple on a search for renunciation behaves well in three ways: by body, speech, and mind. ",
+  "sn14.12:7.7": "A learned noble disciple on a search for renunciation behaves well in three ways: by body, speech, and mind. ",
   "sn14.12:8.1": "The element of good will gives rise to perceptions of good will. ",
   "sn14.12:8.2": "Perceptions of good will give rise to thoughts of good will. … ",
   "sn14.12:8.3": "enthusiasm for good will … ",
