Translations by sujato to translation/en/sujato/sutta/sn/sn55/sn55.27_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn55/sn55.27_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn55/sn55.27_translation-en-sujato.json
@@ -30,7 +30,7 @@
   "sn55.27:7.1": "Furthermore, an uneducated ordinary person has unethical conduct. ",
   "sn55.27:7.2": "Seeing in themselves that unethical conduct, they’re frightened and terrified, and fear what awaits them after death. ",
   "sn55.27:7.3": "When an uneducated ordinary person has these four things, they’re frightened and terrified, and fear what awaits them after death. ",
-  "sn55.27:8.1": "When an educated noble disciple has four things, they’re not frightened or terrified, and don’t fear what awaits them after death. ",
+  "sn55.27:8.1": "When a learned noble disciple has four things, they’re not frightened or terrified, and don’t fear what awaits them after death. ",
   "sn55.27:8.2": "What four? ",
   "sn55.27:8.3": "Firstly, a noble disciple has experiential confidence in the Buddha … ",
   "sn55.27:8.4": "",
