--- a/translation/en/sujato/sutta/sn/sn55/sn55.27_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn55/sn55.27_translation-en-sujato.json
@@ -43,7 +43,7 @@
   "sn55.27:10.3": "",
   "sn55.27:11.1": "Furthermore, a noble disciple’s ethical conduct is loved by the noble ones, unbroken, impeccable, spotless, and unmarred, liberating, praised by sensible people, not mistaken, and leading to immersion. ",
   "sn55.27:11.2": "Seeing in themselves that ethical conduct loved by the noble ones, they’re not frightened or terrified, and don’t fear what awaits them after death. ",
-  "sn55.27:11.3": "When an educated noble disciple has these four things, they’re not frightened or terrified, and don’t fear what awaits them after death.” ",
+  "sn55.27:11.3": "When a learned noble disciple has these four things, they’re not frightened or terrified, and don’t fear what awaits them after death.” ",
   "sn55.27:12.1": "“Sir, Ānanda, I am not afraid. ",
   "sn55.27:12.2": "What have I to fear? ",
   "sn55.27:12.3": "For I have experiential confidence in the Buddha … ",
