--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -13,11 +13,11 @@
   "an7.54:2.7": "And so their views grow. They’re not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re not freed from suffering, I say. ",
   "an7.54:3.1": "An educated noble disciple does understand views, their origin, their cessation, and the practice that leads to their cessation. ",
   "an7.54:3.2": "And so their views cease. They’re freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re freed from suffering, I say. ",
-  "an7.54:3.3": "Knowing and seeing this, an educated noble disciple does not answer: ‘A Realized One exists after death’, ",
+  "an7.54:3.3": "Knowing and seeing this, a learned noble disciple does not answer: ‘A Realized One exists after death’, ",
   "an7.54:3.4": "‘a Realized One doesn’t exist after death’, ",
   "an7.54:3.5": "‘a Realized One both exists and doesn’t exist after death’, ",
   "an7.54:3.6": "‘a Realized One neither exists nor doesn’t exist after death.’ ",
-  "an7.54:3.7": "Knowing and seeing this, an educated noble disciple does not declare the undeclared points. ",
+  "an7.54:3.7": "Knowing and seeing this, a learned noble disciple does not declare the undeclared points. ",
   "an7.54:3.8": "Knowing and seeing this, an educated noble disciple doesn’t shake, tremble, quake, or get nervous regarding the undeclared points. ",
   "an7.54:4.1": "‘A Realized One exists after death’: this is just about craving. … ",
   "an7.54:4.2": "it’s just about perception … ",
