Translations by sujato to translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -34,7 +34,7 @@
   "an7.54:5.2": "And so their regrets cease. They’re freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re freed from suffering, I say. ",
   "an7.54:5.3": "Knowing and seeing this, a learned noble disciple does not answer: ‘A Realized One exists after death’ … ",
   "an7.54:5.4": "‘a Realized One neither exists nor doesn’t exist after death.’ ",
-  "an7.54:5.5": "Knowing and seeing this, an educated noble disciple does not declare the undeclared points. ",
+  "an7.54:5.5": "Knowing and seeing this, a learned noble disciple does not declare the undeclared points. ",
   "an7.54:5.6": "Knowing and seeing this, an educated noble disciple doesn’t shake, tremble, quake, or get nervous regarding the undeclared points. ",
   "an7.54:5.7": "This is the cause, this is the reason why an educated noble disciple has no doubts regarding the undeclared points.” "
 }
