--- a/translation/en/sujato/sutta/sn/sn22/sn22.117_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.117_translation-en-sujato.json
@@ -19,5 +19,5 @@
   "sn22.117:2.5": "perception … ",
   "sn22.117:2.6": "choices … ",
   "sn22.117:2.7": "consciousness as self. ",
-  "sn22.117:2.8": "They’re called an educated noble disciple who is not bound to consciousness, inside or out. They see the near shore and the far shore. They’re exempt from suffering, I say.” "
+  "sn22.117:2.8": "They’re called a learned noble disciple who is not bound to consciousness, inside or out. They see the near shore and the far shore. They’re exempt from suffering, I say.” "
 }
