--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -11,7 +11,7 @@
   "an7.54:2.5": "‘A Realized One neither exists nor doesn’t exist after death’: this is a misconception. ",
   "an7.54:2.6": "An uneducated ordinary person doesn’t understand views, their origin, their cessation, or the practice that leads to their cessation. ",
   "an7.54:2.7": "And so their views grow. They’re not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re not freed from suffering, I say. ",
-  "an7.54:3.1": "An educated noble disciple does understand views, their origin, their cessation, and the practice that leads to their cessation. ",
+  "an7.54:3.1": "A learned noble disciple does understand views, their origin, their cessation, and the practice that leads to their cessation. ",
   "an7.54:3.2": "And so their views cease. They’re freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. They’re freed from suffering, I say. ",
   "an7.54:3.3": "Knowing and seeing this, a learned noble disciple does not answer: ‘A Realized One exists after death’, ",
   "an7.54:3.4": "‘a Realized One doesn’t exist after death’, ",
