--- a/translation/en/sujato/sutta/sn/sn55/sn55.13_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn55/sn55.13_translation-en-sujato.json
@@ -12,7 +12,7 @@
   "sn55.13:2.3": "And they do have the experiential confidence in the Buddha that causes a learned noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
   "sn55.13:2.4": "‘That Blessed One is perfected, a fully awakened Buddha, accomplished in knowledge and conduct, holy, knower of the world, supreme guide for those who wish to train, teacher of gods and humans, awakened, blessed.’ ",
   "sn55.13:3.1": "They don’t have the distrust in the teaching that causes an uneducated ordinary person to be reborn—when their body breaks up, after death—in a place of loss, a bad place, the underworld, hell. ",
-  "sn55.13:3.2": "And they do have the experiential confidence in the teaching that causes an educated noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
+  "sn55.13:3.2": "And they do have the experiential confidence in the teaching that causes a learned noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
   "sn55.13:3.3": "‘The teaching is well explained by the Buddha—visible in this very life, immediately effective, inviting inspection, relevant, so that sensible people can know it for themselves.’ ",
   "sn55.13:4.1": "They don’t have the distrust in the Saṅgha that causes an uneducated ordinary person to be reborn—when their body breaks up, after death—in a place of loss, a bad place, the underworld, hell. ",
   "sn55.13:4.2": "And they do have the experiential confidence in the Saṅgha that causes a learned noble disciple to be reborn—when their body breaks up, after death—in a good place, a heavenly realm. ",
