--- a/translation/en/sujato/sutta/sn/sn22/sn22.135_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.135_translation-en-sujato.json
@@ -18,7 +18,7 @@
   "sn22.135:3.2": "“Reverend Koṭṭhita, they speak of this thing called ‘knowledge’. ",
   "sn22.135:3.3": "What is knowledge? ",
   "sn22.135:3.4": "And how is a knowledgeable person defined?” ",
-  "sn22.135:4.1": "“Reverend, it’s when an educated noble disciple understands form, its origin, its cessation, and the practice that leads to its cessation. ",
+  "sn22.135:4.1": "“Reverend, it’s when a learned noble disciple understands form, its origin, its cessation, and the practice that leads to its cessation. ",
   "sn22.135:4.2": "They understand feeling … ",
   "sn22.135:4.3": "perception … ",
   "sn22.135:4.4": "choices … ",
