--- a/translation/en/sujato/sutta/sn/sn22/sn22.134_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.134_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "sn22.134:3.2": "“Reverend Koṭṭhita, they speak of this thing called ‘knowledge’. ",
   "sn22.134:3.3": "What is knowledge? ",
   "sn22.134:3.4": "And how is a knowledgeable person defined?” ",
-  "sn22.134:4.1": "“Reverend, an educated noble disciple truly understands the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.134:4.1": "“Reverend, a learned noble disciple truly understands the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.134:4.2": "feeling, ",
   "sn22.134:4.3": "perception, ",
   "sn22.134:4.4": "choices, ",
