Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.126_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.126_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.126_translation-en-sujato.json
@@ -26,7 +26,7 @@
   "sn22.126:3.2": "“Sir, they speak of this thing called ‘knowledge’. ",
   "sn22.126:3.3": "What is knowledge? ",
   "sn22.126:3.4": "And how is a knowledgeable person defined?” ",
-  "sn22.126:4.1": "“Mendicant, it’s when an educated noble disciple truly understands form, which is liable to originate, as form which is liable to originate. ",
+  "sn22.126:4.1": "“Mendicant, it’s when a learned noble disciple truly understands form, which is liable to originate, as form which is liable to originate. ",
   "sn22.126:4.2": "They truly understand form, which is liable to vanish, as form which is liable to vanish. ",
   "sn22.126:4.3": "They truly understand form, which is liable to originate and vanish, as form which is liable to originate and vanish. ",
   "sn22.126:4.4": "They truly understand feeling … ",
