--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "an7.54:0.2": "6. The Undeclared Points ",
   "an7.54:0.3": "The Undeclared Points ",
   "an7.54:1.1": "Then a mendicant went up to the Buddha, bowed, sat down to one side, and said to him: ",
-  "an7.54:1.2": "“Sir, what is the cause, what is the reason why an educated noble disciple has no doubts regarding the undeclared points?” ",
+  "an7.54:1.2": "“Sir, what is the cause, what is the reason why a learned noble disciple has no doubts regarding the undeclared points?” ",
   "an7.54:2.1": "“Mendicant, it’s due to the cessation of views that a learned noble disciple has no doubts regarding the undeclared points. ",
   "an7.54:2.2": "‘A Realized One exists after death’: this is a misconception. ",
   "an7.54:2.3": "‘A Realized One doesn’t exist after death’: this is a misconception. ",
