Translations by sujato to translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
@@ -67,7 +67,7 @@
   "sn22.55:10.2": "“Mendicant, an uneducated ordinary person worries about things that aren’t a worry. ",
   "sn22.55:10.3": "For an uneducated ordinary person worries: ",
   "sn22.55:10.4": "‘It might not be, and it might not be mine. It will not be, and it will not be mine.’ ",
-  "sn22.55:11.1": "An educated noble disciple doesn’t worry about things that aren’t a worry. ",
+  "sn22.55:11.1": "A learned noble disciple doesn’t worry about things that aren’t a worry. ",
   "sn22.55:11.2": "For an educated noble disciple doesn’t worry: ",
   "sn22.55:11.3": "‘It might not be, and it might not be mine. It will not be, and it will not be mine.’ ",
   "sn22.55:11.4": "As long as consciousness remains, it would remain involved with form, supported by form, founded on form. And with a sprinkle of relishing, it would grow, increase, and mature. ",
