--- a/translation/en/sujato/sutta/sn/sn22/sn22.8_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.8_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "sn22.8:1.13": "which gives rise to sorrow, lamentation, pain, sadness, and distress. ",
   "sn22.8:1.14": "That’s how grasping leads to anxiety. ",
   "sn22.8:2.1": "And how does not grasping lead to freedom from anxiety? ",
-  "sn22.8:2.2": "It’s when an educated noble disciple regards form like this: ‘This is not mine, I am not this, this is not my self.’ ",
+  "sn22.8:2.2": "It’s when a learned noble disciple regards form like this: ‘This is not mine, I am not this, this is not my self.’ ",
   "sn22.8:2.3": "When that form of theirs decays and perishes, ",
   "sn22.8:2.4": "it doesn’t give rise to sorrow, lamentation, pain, sadness, and distress. ",
   "sn22.8:2.5": "They regard feeling … ",
