--- a/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.54_translation-en-sujato.json
@@ -36,5 +36,5 @@
   "an7.54:5.4": "‘a Realized One neither exists nor doesn’t exist after death.’ ",
   "an7.54:5.5": "Knowing and seeing this, a learned noble disciple does not declare the undeclared points. ",
   "an7.54:5.6": "Knowing and seeing this, a learned noble disciple doesn’t shake, tremble, quake, or get nervous regarding the undeclared points. ",
-  "an7.54:5.7": "This is the cause, this is the reason why an educated noble disciple has no doubts regarding the undeclared points.” "
+  "an7.54:5.7": "This is the cause, this is the reason why a learned noble disciple has no doubts regarding the undeclared points.” "
 }
