Translations by sujato to translation/en/sujato/sutta/an/an8/an8.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an8/an8.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an8/an8.6_translation-en-sujato.json
@@ -34,7 +34,7 @@
   "an8.6:4.5": "They favor pleasure and oppose pain. ",
   "an8.6:4.6": "Being so full of favoring and opposing, they’re not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. ",
   "an8.6:4.7": "They’re not freed from suffering, I say. ",
-  "an8.6:5.1": "An educated noble disciple encounters gain. ",
+  "an8.6:5.1": "A learned noble disciple encounters gain. ",
   "an8.6:5.2": "They reflect: ",
   "an8.6:5.3": "‘I’ve encountered this gain. ",
   "an8.6:5.4": "It’s impermanent, suffering, and perishable.’ They truly understand it. ",
