Translations by sujato to translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
@@ -40,7 +40,7 @@
   "sn36.6:3.8": "There’s no underlying tendency for repulsion towards painful feeling underlying that. ",
   "sn36.6:3.9": "When touched by painful feeling they don’t look forward to enjoying sensual pleasures. ",
   "sn36.6:3.10": "Why is that? ",
-  "sn36.6:3.11": "Because an educated noble disciple understands an escape from painful feeling apart from sensual pleasures. ",
+  "sn36.6:3.11": "Because a learned noble disciple understands an escape from painful feeling apart from sensual pleasures. ",
   "sn36.6:3.12": "Since they don’t look forward to enjoying sensual pleasures, there’s no underlying tendency to greed for pleasant feeling underlying that. ",
   "sn36.6:3.13": "They truly understand feelings’ origin, ending, gratification, drawback, and escape. ",
   "sn36.6:3.14": "There’s no underlying tendency to ignorance about neutral feeling underlying that. ",
