--- a/translation/en/sujato/sutta/an/an1/an1.51-60_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an1/an1.51-60_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "an1.52:1.0": "52 ",
   "an1.52:1.1": "“This mind, mendicants, is radiant. ",
   "an1.52:1.2": "And it is freed from passing corruptions. ",
-  "an1.52:1.3": "An educated noble disciple truly understands this. ",
+  "an1.52:1.3": "A learned noble disciple truly understands this. ",
   "an1.52:1.4": "So I say that the educated noble disciple has development of the mind.” ",
   "an1.53:1.0": "53 ",
   "an1.53:1.1": "“If, mendicants, a mendicant cultivates a mind of love even as long as a finger-snap, ",
