--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -8,7 +8,7 @@
   "pli-tv-kd16:1.1.3": "As a result, the monks stayed here and there: ",
   "pli-tv-kd16:1.1.4": "in the wilderness, at the foot of a tree, on a hill, in a gorge, in a hillside cave, in a charnel ground, in the forest, in the open, on a heap of straw. ",
   "pli-tv-kd16:1.1.5": "Early in the morning, they would emerge from those places. ",
-  "pli-tv-kd16:1.1.6": "And they were pleasing in their conduct: in going out and coming back, in looking ahead and looking aside, in bending and stretching their arms. Their eyes were lowered, and they were perfect in deportment. ",
+  "pli-tv-kd16:1.1.6": "They were pleasing in their conduct: in going out and coming back, in looking ahead and looking aside, in bending and stretching their arms. Their eyes were lowered, and they were perfect in deportment. ",
   "pli-tv-kd16:1.2.1": "One morning a wealthy merchant of Rājagaha was going to a park ",
   "pli-tv-kd16:1.2.2": "when he saw those monks. ",
   "pli-tv-kd16:1.2.4": "Being inspired, ",
