--- a/translation/en/sujato/sutta/sn/sn14/sn14.21_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn14/sn14.21_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "sn14.21:0.3": "Beginning With the Uneducated ",
   "sn14.21:1.1": "At Sāvatthī. ",
   "sn14.21:1.2": "“Mendicants, sentient beings come together and converge because of an element: ",
-  "sn14.21:1.3": "the uneducated with the uneducated … ",
+  "sn14.21:1.3": "the unlearned with the unlearned … ",
   "sn14.21:1.4": "lazy … ",
   "sn14.21:1.5": "witless … ",
   "sn14.21:1.6": "learned … ",
