--- a/translation/en/sujato/sutta/an/an4/an4.125_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.125_translation-en-sujato.json
@@ -21,6 +21,6 @@
   "an4.125:2.8": "The lifespan of the gods of abundant fruit is five hundred eons. ",
   "an4.125:2.9": "An ordinary person stays there until the lifespan of those gods is spent, then they go to hell or the animal realm or the ghost realm. ",
   "an4.125:2.10": "But a disciple of the Buddha stays there until the lifespan of those gods is spent, then they’re extinguished in that very life. ",
-  "an4.125:2.11": "This is the difference between a learned noble disciple and an uneducated ordinary person, that is, when there is a place of rebirth. ",
+  "an4.125:2.11": "This is the difference between a learned noble disciple and an unlearned ordinary person, that is, when there is a place of rebirth. ",
   "an4.125:2.12": "These are the four people found in the world.” "
 }
