--- a/translation/en/sujato/sutta/an/an3/an3.116_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.116_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "an3.116:1.5": "The lifespan of the gods of infinite space is twenty thousand eons. ",
   "an3.116:1.6": "An ordinary person stays there until the lifespan of those gods is spent, then they go to hell or the animal realm or the ghost realm. ",
   "an3.116:1.7": "But a disciple of the Buddha stays there until the lifespan of those gods is spent, then they’re extinguished in that very life. ",
-  "an3.116:1.8": "This is the difference between a learned noble disciple and an uneducated ordinary person as regards their place of rebirth. ",
+  "an3.116:1.8": "This is the difference between a learned noble disciple and an unlearned ordinary person as regards their place of rebirth. ",
   "an3.116:2.1": "Furthermore, a person, going totally beyond the dimension of infinite space, aware that ‘consciousness is infinite’, enters and remains in the dimension of infinite consciousness. ",
   "an3.116:2.2": "They enjoy it and like it and find it satisfying. If they’re set on that, committed to it, and meditate on it often without losing it, when they die they’re reborn in the company of the gods of the dimension of infinite consciousness. ",
   "an3.116:2.3": "The lifespan of the gods of infinite consciousness is forty thousand eons. ",
