--- a/translation/en/sujato/sutta/an/an4/an4.123_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.123_translation-en-sujato.json
@@ -31,6 +31,6 @@
   "an4.123:4.4": "The lifespan of the gods of abundant fruit is five hundred eons. ",
   "an4.123:4.5": "An ordinary person stays there until the lifespan of those gods is spent, then they go to hell or the animal realm or the ghost realm. ",
   "an4.123:4.6": "But a disciple of the Buddha stays there until the lifespan of those gods is spent, then they’re extinguished in that very life. ",
-  "an4.123:4.7": "This is the difference between a learned noble disciple and an uneducated ordinary person, that is, when there is a place of rebirth. ",
+  "an4.123:4.7": "This is the difference between a learned noble disciple and an unlearned ordinary person, that is, when there is a place of rebirth. ",
   "an4.123:4.8": "These are the four people found in the world.” "
 }
