--- a/translation/en/sujato/sutta/sn/sn22/sn22.73_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.73_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn22.73:0.2": "8. Itchy ",
   "sn22.73:0.3": "Gratification ",
   "sn22.73:1.1": "At Sāvatthī. ",
-  "sn22.73:1.2": "“Mendicants, an uneducated ordinary person doesn’t truly understand the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.73:1.2": "“Mendicants, an unlearned ordinary person doesn’t truly understand the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.73:1.3": "feeling, ",
   "sn22.73:1.4": "perception, ",
   "sn22.73:1.5": "choices, ",
