--- a/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn36/sn36.6_translation-en-sujato.json
@@ -19,7 +19,7 @@
   "sn36.6:1.15": "The underlying tendency for repulsion towards painful feeling underlies that. ",
   "sn36.6:1.16": "When touched by painful feeling they look forward to enjoying sensual pleasures. ",
   "sn36.6:1.17": "Why is that? ",
-  "sn36.6:1.18": "Because an uneducated ordinary person doesn’t understand any escape from painful feeling apart from sensual pleasures. ",
+  "sn36.6:1.18": "Because an unlearned ordinary person doesn’t understand any escape from painful feeling apart from sensual pleasures. ",
   "sn36.6:1.19": "Since they look forward to enjoying sensual pleasures, the underlying tendency to greed for pleasant feeling underlies that. ",
   "sn36.6:1.20": "They don’t truly understand feelings’ origin, ending, gratification, drawback, and escape. ",
   "sn36.6:1.21": "The underlying tendency to ignorance about neutral feeling underlies that. ",
