Translations by sujato to translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
@@ -47,7 +47,7 @@
   "mn2:8.7": "Or they have such a view: ",
   "mn2:8.8": "‘This self of mine is he who speaks and feels and experiences the results of good and bad deeds in all the different realms. This self is permanent, everlasting, eternal, and imperishable, and will last forever and ever.’ ",
   "mn2:8.9": "This is called a misconception, the thicket of views, the desert of views, the trick of views, the evasiveness of views, the fetter of views. ",
-  "mn2:8.10": "An uneducated ordinary person who is fettered by views is not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. ",
+  "mn2:8.10": "An unlearned ordinary person who is fettered by views is not freed from rebirth, old age, and death, from sorrow, lamentation, pain, sadness, and distress. ",
   "mn2:8.11": "They’re not freed from suffering, I say. ",
   "mn2:9.1": "",
   "mn2:9.2": "But take a learned noble disciple who has seen the noble ones, and is skilled and trained in the teaching of the noble ones. They’ve seen good persons, and are skilled and trained in the teaching of the good persons. ",
