Translations by sujato to translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "an3.62:3.2": "When this happens, a mother can’t find her child, and a child can’t find their mother. ",
   "an3.62:3.3": "This is the third peril that tears mothers and children apart. ",
   "an3.62:3.4": "These are the three perils an uneducated ordinary person speaks of that tear mothers and children apart. ",
-  "an3.62:4.1": "Mendicants, an uneducated ordinary person speaks of three perils that don’t tear mothers and children apart. ",
+  "an3.62:4.1": "Mendicants, an unlearned ordinary person speaks of three perils that don’t tear mothers and children apart. ",
   "an3.62:4.2": "What three? ",
   "an3.62:4.3": "There comes a time when a great fire flares up, ",
   "an3.62:4.4": "and it burns villages, towns, and cities. ",
