--- a/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn2_translation-en-sujato.json
@@ -19,7 +19,7 @@
   "mn2:4.1": "Some defilements should be given up by seeing, some by restraint, some by using, some by enduring, some by avoiding, some by dispelling, and some by developing. ",
   "mn2:5.0": "1. Defilements Given Up by Seeing ",
   "mn2:5.1": "And what are the defilements that should be given up by seeing? ",
-  "mn2:5.2": "Take an uneducated ordinary person who has not seen the noble ones, and is neither skilled nor trained in the teaching of the noble ones. They’ve not seen good persons, and are neither skilled nor trained in the teaching of the good persons. ",
+  "mn2:5.2": "Take an unlearned ordinary person who has not seen the noble ones, and is neither skilled nor trained in the teaching of the noble ones. They’ve not seen good persons, and are neither skilled nor trained in the teaching of the good persons. ",
   "mn2:5.3": "They don’t understand to which things they should pay attention and to which things they should not pay attention. ",
   "mn2:5.4": "So they pay attention to things they shouldn’t and don’t pay attention to things they should. ",
   "mn2:6.1": "And what are the things to which they pay attention but should not? ",
