--- a/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.55_translation-en-sujato.json
@@ -65,7 +65,7 @@
   "sn22.55:9.4": "“Sir, a mendicant who makes such a resolution can cut off the five lower fetters. ",
   "sn22.55:10.1": "But how are they to know and see in order to end the defilements in the present life?” ",
   "sn22.55:10.2": "“Mendicant, an unlearned ordinary person worries about things that aren’t a worry. ",
-  "sn22.55:10.3": "For an uneducated ordinary person worries: ",
+  "sn22.55:10.3": "For an unlearned ordinary person worries: ",
   "sn22.55:10.4": "‘It might not be, and it might not be mine. It will not be, and it will not be mine.’ ",
   "sn22.55:11.1": "A learned noble disciple doesn’t worry about things that aren’t a worry. ",
   "sn22.55:11.2": "For a learned noble disciple doesn’t worry: ",
