--- a/translation/en/sujato/sutta/an/an5/an5.50_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.50_translation-en-sujato.json
@@ -74,7 +74,7 @@
   "an5.50:12.4": "If I were to sorrow and wail and lament, beating my breast and falling into confusion, just because someone liable to perishing perishes, I’d lose my appetite and my physical appearance would deteriorate. My work wouldn’t get done, my enemies would be encouraged, and my friends would be dispirited.’ ",
   "an5.50:12.5": "And so, when someone liable to perishing perishes, they don’t sorrow and wail and lament, beating their breast and falling into confusion. ",
   "an5.50:12.6": "This is called ",
-  "an5.50:12.7": "a learned noble disciple who has drawn out sorrow’s poisoned arrow, struck by which uneducated ordinary people only mortify themselves. ",
+  "an5.50:12.7": "a learned noble disciple who has drawn out sorrow’s poisoned arrow, struck by which unlearned ordinary people only mortify themselves. ",
   "an5.50:12.8": "Sorrowless, free of thorns, that noble disciple only extinguishes themselves. ",
   "an5.50:13.1": "These are the five things that cannot be had by any ascetic or brahmin or god or Māra or Brahmā or by anyone in the world. ",
   "an5.50:14.1": "Sorrowing and lamenting ",
