--- a/translation/en/sujato/sutta/an/an5/an5.50_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.50_translation-en-sujato.json
@@ -46,7 +46,7 @@
   "an5.50:8.2": "What five? ",
   "an5.50:8.3": "That someone liable to old age should not grow old. … ",
   "an5.50:8.4": "That someone liable to sickness should not get sick. … That someone liable to death should not die. … That someone liable to ending should not end. … That someone liable to perishing should not perish. … ",
-  "an5.50:9.1": "An uneducated ordinary person has someone liable to old age who grows old. ",
+  "an5.50:9.1": "An unlearned ordinary person has someone liable to old age who grows old. ",
   "an5.50:9.2": "But they don’t reflect on old age: ",
   "an5.50:9.3": "‘It’s not just me who has someone liable to old age who grows old. For all sentient beings have someone liable to old age who grows old, as long as sentient beings come and go, pass away and are reborn. ",
   "an5.50:9.4": "If I were to sorrow and wail and lament, beating my breast and falling into confusion, just because someone liable to old age grows old, I’d lose my appetite and my physical appearance would deteriorate. My work wouldn’t get done, my enemies would be encouraged, and my friends would be dispirited.’ ",
