--- a/translation/en/sujato/sutta/an/an3/an3.39_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.39_translation-en-sujato.json
@@ -24,7 +24,7 @@
   "an3.39:6.1": "There are these three vanities. ",
   "an3.39:6.2": "What three? ",
   "an3.39:6.3": "The vanity of youth, of health, and of life. ",
-  "an3.39:6.4": "Intoxicated with the vanity of youth, an uneducated ordinary person does bad things by way of body, speech, and mind. ",
+  "an3.39:6.4": "Intoxicated with the vanity of youth, an unlearned ordinary person does bad things by way of body, speech, and mind. ",
   "an3.39:6.5": "When their body breaks up, after death, they’re reborn in a place of loss, a bad place, the underworld, hell. ",
   "an3.39:6.6": "Intoxicated with the vanity of health … ",
   "an3.39:6.7": "Intoxicated with the vanity of life, an uneducated ordinary person does bad things by way of body, speech, and mind. ",
