Translations by sujato to translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn14.12:2.2": "The element of sensuality gives rise to sensual perceptions. Sensual perceptions give rise to sensual thoughts. Sensual thoughts give rise to sensual desires. Sensual desires give rise to sensual passions. Sensual passions give rise to searches for sensual pleasures. ",
   "sn14.12:2.3": "An uneducated ordinary person on a search for sensual pleasures behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:3.1": "The element of malice gives rise to malicious perceptions. Malicious perceptions give rise to malicious thoughts. … malicious desires … malicious passions … malicious searches … ",
-  "sn14.12:3.2": "An uneducated ordinary person on a malicious search behaves badly in three ways: by body, speech, and mind. ",
+  "sn14.12:3.2": "An unlearned ordinary person on a malicious search behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:4.1": "The element of cruelty gives rise to cruel perceptions. Cruel perceptions give rise to cruel thoughts. … cruel desires … cruel passions … cruel searches … ",
   "sn14.12:4.2": "An uneducated ordinary person on a cruel search behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:5.1": "Suppose a person was to drop a burning torch in a thicket of dry grass. If they don’t quickly extinguish it with their hands and feet, the creatures living in the grass and wood would come to ruin. ",
