--- a/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn14/sn14.12_translation-en-sujato.json
@@ -6,7 +6,7 @@
   "sn14.12:1.2": "“Mendicants, sensual, malicious, and cruel thoughts arise for a reason, not without reason. ",
   "sn14.12:2.1": "And how do sensual, malicious, and cruel thoughts arise for a reason, not without reason? ",
   "sn14.12:2.2": "The element of sensuality gives rise to sensual perceptions. Sensual perceptions give rise to sensual thoughts. Sensual thoughts give rise to sensual desires. Sensual desires give rise to sensual passions. Sensual passions give rise to searches for sensual pleasures. ",
-  "sn14.12:2.3": "An uneducated ordinary person on a search for sensual pleasures behaves badly in three ways: by body, speech, and mind. ",
+  "sn14.12:2.3": "An unlearned ordinary person on a search for sensual pleasures behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:3.1": "The element of malice gives rise to malicious perceptions. Malicious perceptions give rise to malicious thoughts. … malicious desires … malicious passions … malicious searches … ",
   "sn14.12:3.2": "An unlearned ordinary person on a malicious search behaves badly in three ways: by body, speech, and mind. ",
   "sn14.12:4.1": "The element of cruelty gives rise to cruel perceptions. Cruel perceptions give rise to cruel thoughts. … cruel desires … cruel passions … cruel searches … ",
