--- a/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
@@ -16,7 +16,7 @@
   "an3.62:3.1": "Furthermore, there comes a time of peril from wild savages, and the countryfolk mount their vehicles and flee everywhere. ",
   "an3.62:3.2": "When this happens, a mother can’t find her child, and a child can’t find their mother. ",
   "an3.62:3.3": "This is the third peril that tears mothers and children apart. ",
-  "an3.62:3.4": "These are the three perils an uneducated ordinary person speaks of that tear mothers and children apart. ",
+  "an3.62:3.4": "These are the three perils an unlearned ordinary person speaks of that tear mothers and children apart. ",
   "an3.62:4.1": "Mendicants, an unlearned ordinary person speaks of three perils that don’t tear mothers and children apart. ",
   "an3.62:4.2": "What three? ",
   "an3.62:4.3": "There comes a time when a great fire flares up, ",
@@ -31,7 +31,7 @@
   "an3.62:6.1": "Furthermore, there comes a time of peril from wild savages, and the countryfolk mount their vehicles and flee everywhere. ",
   "an3.62:6.2": "When this happens, sometimes a mother can find her child, and a child can find their mother. ",
   "an3.62:6.3": "This is the third peril that doesn’t tear mothers and children apart. ",
-  "an3.62:6.4": "These are the three perils an uneducated ordinary person speaks of that don’t tear mothers and children apart. ",
+  "an3.62:6.4": "These are the three perils an unlearned ordinary person speaks of that don’t tear mothers and children apart. ",
   "an3.62:7.1": "There are three perils that tear mothers and children apart. ",
   "an3.62:7.2": "What three? ",
   "an3.62:7.3": "The perils of old age, sickness, and death. ",
