--- a/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
@@ -2,7 +2,7 @@
   "an3.62:0.1": "Numbered Discourses 3.62 ",
   "an3.62:0.2": "7. The Great Chapter ",
   "an3.62:0.3": "Perils ",
-  "an3.62:1.1": "“Mendicants, an uneducated ordinary person speaks of three perils that tear mothers and children apart. ",
+  "an3.62:1.1": "“Mendicants, an unlearned ordinary person speaks of three perils that tear mothers and children apart. ",
   "an3.62:1.2": "What three? ",
   "an3.62:1.3": "There comes a time when a great fire flares up, ",
   "an3.62:1.4": "and it burns villages, towns, and cities. ",
