Translations by sujato to translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
@@ -746,7 +746,7 @@
   "dn33:2.3.8": "Seven prerequisites for immersion: ",
   "dn33:2.3.9": "right view, right thought, right speech, right action, right livelihood, right effort, and right mindfulness. ",
   "dn33:2.3.10": "Seven bad qualities: ",
-  "dn33:2.3.11": "a mendicant is faithless, shameless, imprudent, uneducated, lazy, unmindful, and witless. ",
+  "dn33:2.3.11": "a mendicant is faithless, shameless, imprudent, unlearned, lazy, unmindful, and witless. ",
   "dn33:2.3.12": "Seven good qualities: ",
   "dn33:2.3.13": "a mendicant is faithful, conscientious, prudent, learned, energetic, mindful, and wise. ",
   "dn33:2.3.14": "Seven aspects of the teachings of the good persons: ",
