Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -61,7 +61,7 @@
   "an10.177:16.1": "Nehmen wir jemand anders, der das Töten lebende Geschöpfe unterlässt … und rechte Ansicht hat. ",
   "an10.177:16.2": "Er gibt Asketen oder Brahmanen Spenden … ",
   "an10.177:16.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er unter Göttern wiedergeboren. ",
-  "an10.177:16.4": "Dort erhält er die fünf Arten himmlischer Sinnesreize. ",
+  "an10.177:16.4": "Dort erhält er die fünf Arten sinnlicher Erregung der Götter. ",
   "an10.177:17.1": "Da er in diesem Leben das Töten lebender Geschöpfe unterlassen hat … und rechte Ansicht hatte, wurde er unter Göttern wiedergeboren. ",
   "an10.177:17.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er die fünf Arten himmlischer Sinnesreize. ",
   "an10.177:17.3": "Es ist nie fruchtlos für den Spender.“ ",
