Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -63,7 +63,7 @@
   "an10.177:16.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er unter Göttern wiedergeboren. ",
   "an10.177:16.4": "Dort erhält er die fünf Arten sinnlicher Erregung der Götter. ",
   "an10.177:17.1": "Da er in diesem Leben das Töten lebender Geschöpfe unterlassen hat … und rechte Ansicht hatte, wurde er unter Göttern wiedergeboren. ",
-  "an10.177:17.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er die fünf Arten himmlischer Sinnesreize. ",
+  "an10.177:17.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er die fünf Arten sinnlicher Erregung der Götter. ",
   "an10.177:17.3": "Es ist nie fruchtlos für den Spender.“ ",
   "an10.177:18.1": "„Es ist unglaublich, Meister Gotama, es ist erstaunlich! ",
   "an10.177:18.2": "Eben das reicht völlig aus, um das Spenden und das Ausführen von Gedenkriten für Verstorbene zu rechtfertigen, da es nie fruchtlos für den Spender ist.“ ",
