Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
@@ -146,7 +146,7 @@
   "dn19:29.5": "Da waren der Prinz Reṇu, der Brahmanenschüler Jotipāla und sechs andere Adlige, und diese acht wurden Freunde. ",
   "dn19:29.6": "Als seine Zeit gekommen war, starb der Verwalter. ",
   "dn19:29.7": "Bei seinem Tod klagte der König Disampati: ",
-  "dn19:29.8": "„Zu einer Zeit, da ich alle meine Pflichten an den brahmanischen Verwalter übergeben habe und mich mit den fünf Arten von Sinnesreizen vergnüge, mit denen ich versorgt und ausgestattet bin, stirbt er!“ ",
+  "dn19:29.8": "„Zu einer Zeit, da ich alle meine Pflichten an den brahmanischen Verwalter übergeben habe und mich mit den fünf Arten sinnlicher Erregung vergnüge, mit denen ich versorgt und ausgestattet bin, stirbt er!“ ",
   "dn19:29.9": "Darauf sagte der Prinz Reṇu zu ihm: ",
   "dn19:29.10": "„Majestät, klage nicht zu viel über den Tod des Verwalters. ",
   "dn19:29.11": "Er hat einen Sohn mit Namen Jotipāla, der sogar noch klüger und fachkundiger ist als sein Vater. ",
