Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
@@ -183,7 +183,7 @@
   "dn19:33.8": "Wenn ich die Königswürde erlange, werde ich sie mit euch allen teilen.“ ",
   "dn19:34.1": "Als seine Zeit gekommen war, starb der König Disampati. ",
   "dn19:34.2": "Nach seinem Tod salbten die Königsmacher den Prinzen Reṇu zum König. ",
-  "dn19:34.3": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten von Sinnesreizen, mit denen er versorgt und ausgestattet war. ",
+  "dn19:34.3": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten sinnlicher Erregung, mit denen er versorgt und ausgestattet war. ",
   "dn19:34.4": "Da ging der Große Verwalter zu den sechs Adligen und sagte: ",
   "dn19:34.5": "„Der König Disampati ist verstorben. ",
   "dn19:34.6": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten von Sinnesreizen, mit denen er versorgt und ausgestattet war. ",
