Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
@@ -186,7 +186,7 @@
   "dn19:34.3": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten sinnlicher Erregung, mit denen er versorgt und ausgestattet war. ",
   "dn19:34.4": "Da ging der Große Verwalter zu den sechs Adligen und sagte: ",
   "dn19:34.5": "„Der König Disampati ist verstorben. ",
-  "dn19:34.6": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten von Sinnesreizen, mit denen er versorgt und ausgestattet war. ",
+  "dn19:34.6": "Doch als er gesalbt war, vergnügte König Reṇu sich mit den fünf Arten sinnlicher Erregung, mit denen er versorgt und ausgestattet war. ",
   "dn19:34.7": "Wer kennt die berauschende Macht der Sinnenfreuden? ",
   "dn19:34.8": "Kommt, ihr Herren, geht zum Prinzen Reṇu und sagt: ",
   "dn19:34.9": "‚Herr, der König Disampati ist verstorben und du wurdest zum König gesalbt. Erinnerst du dich an dein Versprechen?‘“ ",
