Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an6/an6.25_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an6/an6.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.25_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "an6.25:6.4": "",
   "an6.25:7.1": "Zu einer Zeit, zu der ein edler Schüler sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.25:7.2": "Zu dieser Zeit ist sein Geist unbeirrbar. Die Gier hat er hinter sich gelassen, ist frei von ihr und hat sich über sie erhoben. ",
-  "an6.25:7.3": "‚Gier‘ ist ein Ausdruck für die fünf Arten von Sinnesreizen. ",
+  "an6.25:7.3": "‚Gier‘ ist ein Ausdruck für die fünf Arten sinnlicher Erregung. ",
   "an6.25:7.4": "Indem sie sich darauf stützen, werden manche Lebewesen so geläutert. ",
   "an6.25:8.1": "Das sind die sechs Gegenstände zur Besinnung.“ "
 }
