Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an6/an6.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an6/an6.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.63_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an6.63:7.1": "Das Leiden muss erkannt werden. Und seine Quelle, seine Vielfalt, sein Ergebnis, sein Aufhören und die Übung, die zu seinem Aufhören führt, muss erkannt werden. ",
   "an6.63:8.1": "‚Sinnenfreuden müssen erkannt werden. Und ihre Quelle, ihre Vielfalt, ihr Ergebnis, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, müssen erkannt werden.‘ Das habe ich gesagt, ",
   "an6.63:8.2": "aber inwiefern habe ich es gesagt? ",
-  "an6.63:8.3": "Es gibt fünf Arten von Sinnesreizen: ",
+  "an6.63:8.3": "Es gibt fünf Arten sinnlicher Erregung: ",
   "an6.63:8.4": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "an6.63:8.5": "Töne, die das Ohr erkennt … ",
   "an6.63:8.6": "Düfte, die die Nase erkennt … ",
