Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -469,7 +469,7 @@
   "dn33:2.1.5": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
   "dn33:2.1.6": "Fünf mit Ergreifen verbundene Aggregate: ",
   "dn33:2.1.7": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
-  "dn33:2.1.8": "Fünf Arten von Sinnesreizen: ",
+  "dn33:2.1.8": "Fünf Arten sinnlicher Erregung: ",
   "dn33:2.1.9": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "dn33:2.1.10": "Töne, die das Ohr erkennt … ",
   "dn33:2.1.11": "Düfte, die die Nase erkennt … ",
