Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.117_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn35.117:1.3": "Da kam mir der Gedanke: ",
   "sn35.117:1.4": "‚Ich sollte auf meine eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten sinnlicher Erregung hüten, die ich in der Vergangenheit erfahren habe, die vergangen sind, aufgehört haben und zugrunde gegangen sind.‘ ",
   "sn35.117:1.5": "Daher, Mönche und Nonnen, könnte euer Geist auch oft zu den fünf Arten sinnlicher Erregung abschweifen, die ihr in der Vergangenheit erfahren habt, die vergangen sind, aufgehört haben und zugrunde gegangen sind, oder zu den gegenwärtigen oder ein wenig zu den zukünftigen. ",
-  "sn35.117:1.6": "Daher solltet ihr auf eure eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten von Sinnesreizen hüten, die ihr in der Vergangenheit erfahren habt, die vergangen sind, aufgehört haben und zugrunde gegangen sind. ",
+  "sn35.117:1.6": "Daher solltet ihr auf eure eigene Art Beflissenheit und Achtsamkeit üben und den Geist in Bezug auf die fünf Arten sinnlicher Erregung hüten, die ihr in der Vergangenheit erfahren habt, die vergangen sind, aufgehört haben und zugrunde gegangen sind. ",
   "sn35.117:1.7": "Daher solltet ihr diese Dimension verstehen, in der das Auge aufhört und die Wahrnehmung von Bildern schwindet. ",
   "sn35.117:1.8": "Ihr solltet diese Dimension verstehen, in der das Ohr aufhört … in der die Nase aufhört … in der die Zunge aufhört … in der der Körper aufhört … ",
   "sn35.117:1.9": "in der der Geist aufhört und die Wahrnehmung von Gedanken schwindet.“ ",
