Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -211,5 +211,6 @@
   "mn95:20.4": "bet tai dar nėra tiesos pasiekimas.”",
   "mn95:21.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos supratimas. Mes matome tame tiesos supratimą. ",
   "mn95:21.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos pasiekimas, kaip tiesa yra pasiekiama?",
-  "mn95:21.3": "Klausiame Gerbiamojo Gotamos apie tiesos pasiekimą.”"
+  "mn95:21.3": "Klausiame Gerbiamojo Gotamos apie tiesos pasiekimą.”",
+  "mn95:21.4": "„Tų pačių dalykų, Bharadvadžia, kartojimas, lavinimas, puoselėjimas (nulemia) tiesos pasiekimą."
 }
