Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -215,5 +215,6 @@
   "mn95:21.4": "„Tų pačių dalykų, Bharadvadžia, kartojimas, lavinimas, puoselėjimas (nulemia) tiesos pasiekimą.",
   "mn95:21.5": "Štai taip, Bharadvadžia, yra nusakomas tiesos pasiekimas, taip tiesa yra pasiekiama. Taip mes paaiškiname tiesos pasiekimą.”",
   "mn95:22.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos pasiekimas. Mes matome tame tiesos pasiekimą. ",
-  "mn95:22.2": "Bet, Gerbiamas Gotama, koks dalykas labai padeda pasiekti tiesą? "
+  "mn95:22.2": "Bet, Gerbiamas Gotama, koks dalykas labai padeda pasiekti tiesą? ",
+  "mn95:22.3": "Klausiame Gerbiamojo Gotamos apie dalyką labai padedantį pasiekti tiesą.”"
 }
