Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an11.17:12.1": "Und wie melkt eine Nonne trocken? ",
   "an11.17:12.2": "Da wird eine Nonne von einer Hausbesitzerin eingeladen, Roben, Almosen, Unterkunft sowie Arznei und Krankenversorgung anzunehmen, und sie kennt kein Maß beim Nehmen. ",
   "an11.17:12.3": "So melkt eine Nonne trocken. ",
-  "an11.17:13.1": "Und wie lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, keine besondere Achtung angedeihen? ",
+  "an11.17:13.1": "Und wie lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, keine besondere Achtung angedeihen? ",
   "an11.17:13.2": "Da behandelt ein Mönch langjährige Ordensälteste, die schon lange fortgezogen sind, die Väter und Leiter des Saṅgha, mit dem Körper, der Sprache und dem Geist nicht stets freundlich, sowohl öffentlich als insgeheim. ",
   "an11.17:13.3": "So lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, keine besondere Achtung angedeihen. ",
   "an11.17:14.1": "Eine Nonne oder ein Mönch mit diesen elf Eigenschaften kann kein Wachstum, keine Zunahme oder Reife in dieser Lehre und Schulung erlangen. ",
